[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pybatsim-example"
version = "0.0.0"
description = "Example scheduler plugin for PyBatsim"
authors = []
packages = [
  {include = "*.py"},
]

[tool.poetry.dependencies]
python = "^3.7.1"
pybatsim = "^4.0.0a0"

[tool.poetry.plugins."pybatsim.schedulers"]
rejector = "universal_rejection:UniversalRejectionScheduler"
